# pdf-editor

./: .gitignore  README.md
cpp/: BUILD.md  CMakeLists.txt  build.bat
cpp/src/: KeybindDialog.cpp  MainWindow.cpp  MainWindow.h  PdfDocument.cpp  PdfDocument.h  PdfToolDialogs.cpp  PdfToolDialogs.h  PdfView.cpp  PdfView.h  SignatureDialog.cpp  SignaturePickerDialog.cpp  SignaturePickerDialog.h  Theme.h  ThumbnailPanel.cpp  ThumbnailPanel.h  main.cpp
cpp/translations/: en.ts  translations.qrc
installer/: PDFEditor.iss
